--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,7 @@
 @import "base.scss";
 @import "card.scss";
 @import "header.scss";
-@import "techGrid.scss";
+@import "techList.scss";
 @import "videoPlayer.scss";
 @import "videoPlaylist.scss";
 @import "landing.scss";
