--- a/src/sass/_card.scss
+++ b/src/sass/_card.scss
@@ -1,29 +1,32 @@
 .card{
     display:flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
     background-image: radial-gradient(center, rgba($color-red-light, .5), 
     rgba($color-red-dark, 1));;
     padding: 3rem;
     border: solid 2px $color-red-dark;
     border-radius: 3rem;
+    color: rgba(255, 255, 255, 0.7);
+    margin-bottom: .5rem;
+    text-shadow: .3rem .2rem $color-red-dark;
+    margin: .8rem;
+    
+   
+    &__title{
+        display: flex;
+        margin: 1rem;
+
+    }
+    &__position{
+        align-self: center;
+    }
+
     
 
-
-    &__img{
-        width:100%;
-        margin: 1rem;
-    }
-
-    &__title{
-        color: rgba(255, 255, 255, 0.7);
-        margin-bottom: 1rem;
-        text-shadow: .3rem .2rem $color-red-dark;
-
-    }
-
     &__btn{
+        align-self: center;
         background:    $color-red-dark;
         border-radius: 5px;
         padding:       1rem 2rem;
