--- a/src/sass/_landing.scss
+++ b/src/sass/_landing.scss
@@ -16,19 +16,35 @@
 
 
     &__card{
-
+        display: flex;
+        flex-flow: column;
+        align-items: center;
+        justify-content: space-between;
+        
         height: 40rem;
         width: 30rem;
         background-image: radial-gradient(center, rgba($color-red-light, .5), 
         rgba($color-red-dark, 1));;
-        padding: 3rem;
+        padding: 5rem 3rem;
         border: solid 2px $color-red-dark;
         border-radius: 3rem;
-        margin: 5rem;
+        margin: 2rem;
+
+        color: #fff;
+        text-align: center;
+        font-size: 1.5rem;
+        font-weight: 200;
+
+       
+       
         
 
-    
+  
     }
 
-
+    &__link{
+        font-size:5em;
+        text-decoration: none;
+        
+    }
 }
