--- a/src/sass/_videoPlaylist.scss
+++ b/src/sass/_videoPlaylist.scss
@@ -4,7 +4,7 @@
     background-color: #fff;
     
     &__item{
-    padding:3rem;
+    // padding:3rem;
     margin: 1rem;
     border: 1px solid black;
     list-style: none;
