--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -15,6 +15,14 @@ $color-grey-dark-2: #6D5D4B;
 $font-primary: 'Nunito', sans-serif;
 $font-display: 'Josefin Sans', sans-serif;
 
+// MEDIA QUERIES
+
+$bp-largest:75em;//1200px 1200/16 = 75em
+$bp-large:68.75em;//1100px 1100/16 = 68.75em
+$bp-medium:56.25em;//900px 900/16 = 75em
+$bp-small:37.5em;//600px 600/16 = 37.5em
+$bp-smallest:31.25em;//500px 500/16 = 31.25em
+
 *,
 *::before,
 *::after{
@@ -34,6 +42,9 @@ html{
     background-position: fixed;
     box-sizing: border-box;
     font-size: 62.5%;
+
+    @media only screen and (max-width: $bp-large){
+        font-size:50%;}
 }
 
 body{
