--- a/src/sass/_videoPlayer.scss
+++ b/src/sass/_videoPlayer.scss
@@ -1,4 +1,7 @@
 .videoPlayer{
-    padding: 2rem;
-    // background-color: orangered;
+    margin: 5rem;
+    background-color: $color-grey-dark-2;
+    border: $color-grey-dark-2 .8rem solid;
+
+
 }
