--- a/src/sass/_techniquePage.scss
+++ b/src/sass/_techniquePage.scss
@@ -1,9 +1,9 @@
 .techPage{
     grid-area: tech;
-
+    
     display: flex;
     justify-content: center;
-    
+    align-items: center;
     // background-color: aquamarine;
    
 
