--- a/src/sass/_techniquePage.scss
+++ b/src/sass/_techniquePage.scss
@@ -5,7 +5,26 @@
     justify-content: center;
     align-items: center;
     // background-color: aquamarine;
+    margin: 5rem 0;
+    
+    @media only screen and (max-width: $bp-medium){
+        flex-direction: column;
+        margin: 4rem;
+    }
+
+}
+
+.scroll{
+    overflow: scroll;
+    border: none;
+    height: 50rem;
+
+    @media only screen and (max-width: $bp-large){
+        height: 40rem;
+    }
+
+    @media only screen and (max-width: $bp-medium){
+        margin: 3rem 0;
+    }
    
-
-
 }
