--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -20,7 +20,7 @@ $font-display: 'Josefin Sans', sans-serif;
 $bp-largest:75em;//1200px 1200/16 = 75em
 $bp-large:68.75em;//1100px 1100/16 = 68.75em
 $bp-medium:56.25em;//900px 900/16 = 75em
-$bp-small:37.5em;//600px 600/16 = 37.5em
+$bp-small:45.6em;//730px 730/16 = 45.6em
 $bp-smallest:31.25em;//500px 500/16 = 31.25em
 
 *,
@@ -39,12 +39,18 @@ html{
     rgba(0,0,0, 0.8)), 
     url(../img/LogoIsh.jpg);
     background-size: cover;
-    background-position: fixed;
+    background-position: center;
+    background-attachment: fixed;
     box-sizing: border-box;
     font-size: 62.5%;
 
-    @media only screen and (max-width: $bp-large){
+    @media only screen and (max-width: $bp-largest){
         font-size:50%;}
+
+        @media only screen and (max-width: $bp-small){
+            font-size: 30%;
+        }
+    
 }
 
 body{
@@ -62,7 +68,7 @@ body{
     grid-template-areas: 
     "head head head head"
     "tech tech tech tech"
-    ".... .... .... .... "
+    // ".... .... .... .... "
    
 
 
