--- a/src/sass/_card.scss
+++ b/src/sass/_card.scss
@@ -7,7 +7,7 @@
     transition: all 0.2s ease-in;
 
     padding: 1rem;
-    border: solid 2px $color-red-dark;
+    border: solid 2px $color-grey-dark-2;
     border-radius: 3rem;
     color: rgba(255, 255, 255, 0.7);
     margin-bottom: .2rem;
@@ -25,7 +25,7 @@
 
     &:hover{
         transform: scale(1.1);
-        box-shadow: 0.1rem 0.1rem 1rem rgba(255, 255, 255, 0.7);
+        box-shadow: 0 .4rem 1.8rem rgba(255, 255, 255, 0.7);
     }
 
 }
