--- a/src/sass/_landing.scss
+++ b/src/sass/_landing.scss
@@ -3,18 +3,30 @@
     grid-column: 1/ -1;
     display: flex;
     justify-content: center;
-
-
-
-
+    
     // background-image: radial-gradient(center, rgba($color-red-light, .5), 
     // rgba($color-red-dark, 1));;
     padding: 3rem;
     // border: solid 2px $color-red-dark;
     border-radius: 3rem;
     
-
-
+    @media only screen and (max-width: $bp-small){
+        
+        flex-flow: wrap;
+        align-items: center;
+ 
+        // overflow: scroll;
+        // border: none;
+        // height: 60vh;
+        
+    
+    
+        }
+    
+    
+    
+    
+    
     &__card{
         display: flex;
         flex-flow: column;
@@ -26,20 +38,21 @@
         background-image: radial-gradient(center, rgba($color-red-light, .5), 
         rgba($color-red-dark, 1));;
         padding: 5rem 3rem;
-        border: solid 2px $color-red-dark;
+        border: solid 2px $color-grey-dark-2;
         border-radius: 3rem;
         margin: 2rem;
 
         color: #fff;
         text-align: center;
         font-size: 1.5rem;
-        font-weight: 200;
+        font-weight: 200;  
+        transition: all 0.2s ease-in-out;
 
-       
-       
-        
+        &:hover {
+        box-shadow: 0 1.1rem 10rem rgba(255, 255, 255, 0.7);
+        transform: scale(1.08)
+        }
 
-  
     }
 
     &__link{
@@ -49,6 +62,11 @@
     }
 
     &__logo{
-        height:10rem;
+        height:15rem;
+
+        
+    
+       
     }
 }
+
