--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -48,7 +48,7 @@ html{
         font-size:50%;}
 
         @media only screen and (max-width: $bp-small){
-            font-size: 30%;
+            font-size: 40%;
         }
     
 }
@@ -68,7 +68,9 @@ body{
     grid-template-areas: 
     "head head head head"
     "tech tech tech tech"
-    // ".... .... .... .... "
+    ".... .... .... .... ";
+
+   
    
 
 
