--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -62,7 +62,7 @@ body{
 
 .container{
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: auto;
     grid-template-rows: auto;
     gap:1rem;
     grid-template-areas: 
