--- a/src/sass/_techList.scss
+++ b/src/sass/_techList.scss
@@ -3,13 +3,13 @@
     padding: 2rem;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    width: 90%;
+    // width: 90%;
     gap: 2rem;
     margin: 0 2rem;
     // padding: 3rem;
-    @media only screen and (max-width: $bp-large){
-        padding: 0 2rem;
-        }
+    // @media only screen and (max-width: $bp-large){
+    //     padding: 0 2rem;
+    //     }
         @media only screen and (max-width: $bp-medium){
             justify-content: stretch;
             margin: 3rem;
