--- a/src/sass/_landing.scss
+++ b/src/sass/_landing.scss
@@ -35,7 +35,7 @@
         
         height: 40rem;
         width: 30rem;
-        background-image: radial-gradient(center, rgba($color-red-light, .5), 
+        background-image: radial-gradient(rgba($color-red-light, .5), 
         rgba($color-red-dark, 1));;
         padding: 5rem 3rem;
         border: solid 2px $color-grey-dark-2;
