--- a/src/sass/_library.scss
+++ b/src/sass/_library.scss
@@ -1,6 +1,6 @@
 .library{
     grid-area: tech;
-    background-image: radial-gradient(center, rgba($color-red-light, .5), 
+    background-image: radial-gradient(rgba($color-red-light, .5), 
         rgba($color-red-dark, 1));;
 
     display: flex;
