--- a/src/sass/_loginpage.scss
+++ b/src/sass/_loginpage.scss
@@ -109,8 +109,7 @@
     @media only screen and (max-width: $bp-small){
         max-width: 40rem;
     }
-    background-image: radial-gradient(center, rgba($color-red-light, .5), 
-    rgba($color-red-dark, 1));;
+    background-image: radial-gradient(rgba($color-red-light, .5), rgba($color-red-dark, 1));
 
     border-radius: 3rem;
     
