--- a/src/sass/_techniquePage.scss
+++ b/src/sass/_techniquePage.scss
@@ -19,14 +19,16 @@
 }
 
 .scroll{
-    overflow: scroll;
+    overflow: auto;
     border: none;
-    height: 50rem;
+    height: 50vh;
+    flex: 1 1 auto;
     justify-content: center;
     align-items: center;
+    padding: 5rem;
 
     @media only screen and (max-width: $bp-large){
-        height: 40rem;
+        height: 50vh;
     }
 
 }
